--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:minHeight="150dp"
+    android:scaleType="centerCrop"
+    android:id="@+id/imageSlide"
+    app:shapeAppearanceOverlay="@style/circleImageView">
 
 </com.google.android.material.imageview.ShapeableImageView>
