--- a/app/src/main/res/layout/viewholder_category.xml
+++ b/app/src/main/res/layout/viewholder_category.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+
+    android:id="@+id/titleTxt"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:background="@drawable/stroke_bg"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="8dp"
+    android:text="title"
+    android:textAlignment="center"
+    android:textColor="@color/black"
+    android:textSize="16sp">
 
 </TextView>
