Items Detail (BackEnd 1.0) >.<

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,11 @@
         <item name="cornerSize">10dp</item>
     </style>
 
+    <style name="FullCircleImageView">
+        <!-- Đặt kiểu góc là bo tròn -->
+        <item name="cornerFamily">rounded</item>
+        <!-- Bán kính bo tròn là 10dp -->
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
