--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -19,13 +19,14 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:background="@color/lightGrey"
                 android:layout_height="450dp">
 
                 <ImageView
                     android:id="@+id/pic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/lightGrey"
+
                     android:padding="48dp"
                     android:scaleType="fitCenter"
 
@@ -71,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
-                    android:background="@drawable/white_bg"
+                    android:background="@drawable/white_full_corner_bg"
 
                     android:clipToPadding="false"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +82,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/titleTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -91,7 +92,7 @@
                 android:text="title" />
 
             <TextView
-                android:id="@+id/titleTxt"
+                android:id="@+id/titleTxt2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -122,7 +123,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/titleTxt2"
+                android:id="@+id/titleTxt3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -131,7 +132,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/decriptionTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="decription"
