Cart Activity (BackEnd Cart Activity with NO Bill) >.<

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -8,7 +8,7 @@
     tools:context=".Activity.CartActivity">
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/emptyTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Cart is Empty!"
