--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,13 +14,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/splash_pic" />
+                android:layout_height="350dp"
+                app:srcCompat="@drawable/splash_pic"
+                android:layout_marginStart="-32dp"
+                android:layout_marginEnd="-32dp"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -28,8 +32,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/title_splash"
                 android:textAlignment="center"
+                android:textSize="31sp"
                 android:textStyle="bold"
-                android:textSize="31sp" />
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -41,9 +46,31 @@
                 android:lineSpacingExtra="10dp"
                 android:textSize="16sp" />
 
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:hint="Email or Username"
+                android:inputType="textEmailAddress"
+                android:background="@drawable/edittext_backgroud"
+                android:padding="12dp"
+                android:textSize="16sp"/>
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:background="@drawable/edittext_backgroud"
+                android:padding="12dp"
+                android:textSize="16sp"/>
             <androidx.appcompat.widget.AppCompatButton
                 style="@android:style/Widget.Button"
-                android:layout_margin="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 android:id="@+id/startBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,7 +85,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/signin"
                 android:textAlignment="center"
-                android:lineSpacingExtra="18sp"/>
+                android:lineSpacingExtra="18sp"
+                android:layout_marginBottom="32dp"/>
 
         </LinearLayout>
     </ScrollView>
