--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -18,6 +18,7 @@
         app:layout_constraintStart_toStartOf="@+id/scrollView3"
         app:layout_constraintTop_toTopOf="@+id/scrollView3" />
 
+
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
@@ -43,26 +44,16 @@
                     android:layout_marginEnd="8dp"
                     app:srcCompat="@drawable/back" />
 
-                <EditText
-                    android:id="@+id/editTextText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="42dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/stroke_bg"
-                    android:drawableStart="@drawable/search_icon"
-                    android:drawableEnd="@drawable/microphone"
-                    android:drawablePadding="8dp"
-                    android:ems="10"
-                    android:hint="Search ..."
-                    android:inputType="text"
-                    android:paddingHorizontal="8dp" />
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/settings_icon" />
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Giỏ hàng của bạn"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
