--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:hint="Email or Username"
+                android:hint="Email Hoặc Tên tài khoản"
                 android:inputType="textEmailAddress"
                 android:background="@drawable/edittext_backgroud"
                 android:padding="12dp"
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:hint="Password"
+                android:hint="Mật khẩu"
                 android:inputType="textPassword"
                 android:background="@drawable/edittext_backgroud"
                 android:padding="12dp"
@@ -74,7 +74,7 @@
                 android:id="@+id/startBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Let's Get Started"
+                android:text="Đăng nhập"
                 android:background="@drawable/orange_bg"
                 android:textSize="18sp"
                 android:textColor="@color/white"/>
@@ -82,7 +82,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Forgot Password"
+                android:text="Quên mật khẩu?"
                 android:textAlignment="center"
                 android:lineSpacingExtra="18sp"
                 android:layout_marginBottom="32dp"/>
